--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
   font-family: 'Rubik', sans-serif;
 }
 
+/*Begin header styling*/
+
 #pagetop{
   background-color: black;
   border-bottom: 2px solid #808080;
@@ -37,10 +39,13 @@ body {
   float: right;
 }
 
+/*Begin General Page Styling*/
+
 .container {
   text-align: center;
 }
 
+/*Begin Game Styling*/
 #game {
   display: inline-block;
   margin: 10px;
