--- a/style.css
+++ b/style.css
@@ -54,8 +54,9 @@ body {
 /*Carousel styling*/
 
 .carousel-caption {
-  background-color: #808080;
-  background: rgba(0, 0, 0, 0.4);
+  /*background-color: #8b7266; Light brown color*/
+  background: rgba(0, 0, 0, 0.5);
+
 }
 
 /*Begin Game Styling*/
