--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@ body {
 /*Begin header styling*/
 
 #pagetop{
-  background-color: black;
-  border-bottom: 2px solid #808080;
+  background-color: rgba(0,0,0,0.9);
+  border-bottom: 1px solid #808080;
 }
 
 .navbar.navbar-brand {
   text-align: left;
   font-size: 40px;
-  font-family: 'SF Hollywood Hills', monospace;
-  color: #eb553f;
+  font-family: 'SF Hollywood Hills', sans-serif;
+  color: #EB553F;
 }
 
 .option {
@@ -28,13 +28,16 @@ body {
   padding: 3px;
   margin: 5px;
   background-color: #729678;
-  border: 1px solid #729678;
+  border: 1px solid #8B7266;
   border-radius: 5px;
+  font-weight: bolder;
 }
 
 .option:hover {
-  color: white;
-  background-color: #8DC7C8;
+  color: #736259;
+  font-style: italic;
+  background-color: #A3C9A6;
+  border: 4px solid #8B7266;
 }
 
 .navbar.nav-item {
@@ -43,12 +46,22 @@ body {
 
 /*Begin General Page Styling*/
 
-.container {
-  text-align: center;
+.content {
+  display: inline-block;
 }
 
 .restofpage {
+  text-align: center;
   background-color: black;
+}
+
+.restofpage h1 {
+  font-family: 'SF Hollywood Hills', sans-serif;
+  margin-top: 15px;
+  border: 3px dotted #8B7266;
+  border-radius: 20px;
+  padding: 10px;
+  color: #EB553F;
 }
 
 /*Carousel styling*/
@@ -56,21 +69,21 @@ body {
 .carousel-caption {
   /*background-color: #8b7266; Light brown color*/
   background: rgba(0, 0, 0, 0.7);
-  padding: 10px;
+  padding: 5px;
+}
+
+.carousel-caption h5 {
+  color: #EB553F;
 }
 
 /*Begin Game Styling*/
-#game {
-  display: inline-block;
-  margin: 10px;
-}
 
 #game button {
   width: 100%;
 }
 
 #question{
-  background-color: #fafafa;
+  background-color: black;
   border: 1px solid black;
   border-radius: 5px;
   padding: 10px;
@@ -83,4 +96,56 @@ body {
 
 #playagain {
   display: none;
+}
+
+/*Footer Styling
+  I referenced https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_social_media_buttons for social media icons
+*/
+
+#bottom {
+  margin-top: 15px;
+  background-color: #8B7266;
+}
+
+.fa {
+  padding: 10px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 10px;
+  border-radius: 100px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+.copyright {
+  background-color: #736259;
+  font-weight: bolder;
+}
+
+.copyright a{
+  color: #729678;
 }
