--- a/style.css
+++ b/style.css
@@ -53,6 +53,9 @@ body {
 .restofpage {
   text-align: center;
   background-color: black;
+  border-top: 1px solid #808080;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .restofpage h1 {
