--- a/style.css
+++ b/style.css
@@ -60,11 +60,17 @@ body {
 
 .restofpage h1 {
   font-family: 'SF Hollywood Hills', sans-serif;
-  margin-top: 15px;
+  margin: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
   border: 3px dotted #8B7266;
   border-radius: 20px;
   padding: 10px;
   color: #EB553F;
+}
+
+.internal {
+  padding: 20px;
 }
 
 /*Carousel styling*/
@@ -81,16 +87,40 @@ body {
 
 /*Begin Game Styling*/
 
-#game button {
+#gamewrap img {
+  margin: 0px;
+  padding: 0px;
+  display: inline;
   width: 100%;
+  height: auto;
+}
+
+#gamewrap h1 {
+  margin-top: 15px;
+  margin-left: 35%;
+  margin-right: 35%;
+}
+
+#game {
+  margin: 15px;
+  background-color: #8b7266;
+  padding: 15px;
+  border: 4px solid #736259;
+}
+
+#game button {
+  width: 75%;
+  margin: 5px;
 }
 
 #question{
-  background-color: black;
-  border: 1px solid black;
+  background-color: #729678;
+  border: 1px solid #736259;
   border-radius: 5px;
   padding: 10px;
-  margin-bottom: 20px;
+  margin: 20px;
+  font-weight: bolder;
+  font-style: italic;
 }
 
 #inprogress {
@@ -101,6 +131,37 @@ body {
   display: none;
 }
 
+#startbtn, #againbtn {
+  border-radius: 10px;
+  background-color: #729678;
+  color: white;
+}
+
+#startbtn:hover, #againbtn:hover {
+  background-color: #006400;
+}
+
+#answers button {
+  background-color: #EB553F;
+  color: white;
+}
+
+#answers button:hover {
+  background-color: #B22222;
+}
+
+#score {
+  margin-top: 7px;
+  margin-bottom: 20px;
+  background-color: #736259;
+  font-family: 'SF Hollywood Hills', sans-serif;
+  font-size: 24px;
+}
+
+#gameover {
+  font-size: 24px;
+  font-style: italic;
+}
 /*Footer Styling
   I referenced https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_social_media_buttons for social media icons
 */
