--- a/style.css
+++ b/style.css
@@ -131,6 +131,12 @@ body {
   display: none;
 }
 
+#sharescore {
+  margin-left: 100px;
+  margin-right: 100px;
+  display: none;
+}
+
 #startbtn, #againbtn {
   border-radius: 10px;
   background-color: #729678;
@@ -161,6 +167,16 @@ body {
 #gameover {
   font-size: 24px;
   font-style: italic;
+}
+
+#sharescore button {
+  border-radius: 10px;
+  background-color: #EB553F;
+  color: white;
+}
+
+#sharescore button:hover {
+  background-color: #B22222;
 }
 /*Footer Styling
   I referenced https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_social_media_buttons for social media icons
