--- a/style.css
+++ b/style.css
@@ -293,12 +293,36 @@ body {
 .factitem ul {
   list-style-type: none;
   font-size: 13px;
-  margin-right: 10%;
 }
 
 #may20facts > li {
   color: #EB553F;
   margin-top: 5px;
+  margin-right: 10%;
+  padding-bottom: 5px;
+  border-bottom: 2px dotted #8B7266;
+}
+
+#may20facts > li:last-child {
+  border: 0px;
+}
+
+/*
+  Begin resources styling
+*/
+
+#resources img {
+  margin: 0px;
+  padding: 0px;
+  display: inline;
+  width: 100%;
+  height: 100%;
+}
+
+#resources h1 {
+  margin-top: 15px;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 /*
@@ -361,10 +385,6 @@ body {
   text-decoration: none;
   margin: 10px;
   border-radius: 100px;
-}
-
-.fa:hover {
-    opacity: 0.7;
 }
 
 .fa-facebook {
