resources in progress

--- a/style.css
+++ b/style.css
@@ -325,6 +325,25 @@ body {
   margin-right: 25%;
 }
 
+#recommendations {
+  margin-top: 10px;
+  padding-top: 0px;
+}
+
+.recommendation {
+  display: inline-block;
+  width: 80%;
+  margin: 10px;
+  padding: 15px;
+  border: 2px solid #EB553F;
+  border-radius: 10px;
+}
+
+.reccontent {
+  font-size: 12px;
+  padding: 10px;
+}
+
 /*
   Begin contact styling
 */
@@ -385,6 +404,11 @@ body {
   text-decoration: none;
   margin: 10px;
   border-radius: 100px;
+}
+
+.fa:hover {
+  text-decoration: none;
+  color: white;
 }
 
 .fa-facebook {
